[gd_scene load_steps=15 format=2]

[ext_resource path="res://BottomBar.gd" type="Script" id=1]
[ext_resource path="res://assets/menus/bottom_bar.png" type="Texture" id=2]
[ext_resource path="res://assets/cells/bodyIcons/lungs_icon.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/xolonium-regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://CancerDetails.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/cells/bodyIcons/liver-icon.png" type="Texture" id=6]
[ext_resource path="res://assets/cells/bodyIcons/stomach-icon.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="CircleShape2D" id=5]
radius = 20.0

[node name="BottomBar" type="Node2D"]
position = Vector2( 67, 57 )
script = ExtResource( 1 )

[node name="Image" type="Sprite" parent="."]
position = Vector2( 287, 441 )
scale = Vector2( 0.524016, 0.288889 )
texture = ExtResource( 2 )

[node name="Name" type="Label" parent="."]
margin_left = 260.0
margin_top = 510.0
margin_right = 319.0
margin_bottom = 532.0
rect_pivot_offset = Vector2( 75, 0 )
theme = SubResource( 2 )
text = "NOME:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChosenName" type="Label" parent="."]
margin_left = 328.0
margin_top = 511.0
margin_right = 533.0
margin_bottom = 531.0
theme = SubResource( 7 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgeBracket" type="Label" parent="."]
margin_left = 401.0
margin_top = 438.0
margin_right = 726.0
margin_bottom = 481.0
theme = SubResource( 4 )
text = "IDADE"
align = 2

[node name="Lungs" type="Area2D" parent="."]
position = Vector2( 75, 0 )

[node name="LungCollisionShape2D" type="CollisionShape2D" parent="Lungs"]
position = Vector2( 60, 460 )
shape = SubResource( 5 )

[node name="LungsImage" type="Sprite" parent="Lungs"]
position = Vector2( 60, 459 )
scale = Vector2( 0.0585938, 0.0585938 )
texture = ExtResource( 3 )

[node name="Lungs3" type="Area2D" parent="."]
position = Vector2( 75, 0 )

[node name="LungCollisionShape2D" type="CollisionShape2D" parent="Lungs3"]
position = Vector2( 120, 460 )
shape = SubResource( 5 )

[node name="LungsImage" type="Sprite" parent="Lungs3"]
position = Vector2( 120, 459 )
scale = Vector2( 0.0585938, 0.0585938 )
texture = ExtResource( 7 )

[node name="Lungs2" type="Area2D" parent="."]
position = Vector2( 75, 0 )

[node name="LungCollisionShape2D" type="CollisionShape2D" parent="Lungs2"]
position = Vector2( 180, 460 )
shape = SubResource( 5 )

[node name="LungsImage" type="Sprite" parent="Lungs2"]
position = Vector2( 180, 459 )
scale = Vector2( 0.0585938, 0.0585938 )
texture = ExtResource( 6 )

[node name="LungCancer" parent="." instance=ExtResource( 5 )]
position = Vector2( -351, 24 )
scale = Vector2( 0.9, 0.9 )

[connection signal="mouse_entered" from="Lungs" to="." method="_on_Lungs_mouse_entered"]
[connection signal="mouse_exited" from="Lungs" to="." method="_on_Lungs_mouse_exited"]
[connection signal="mouse_entered" from="Lungs3" to="." method="_on_Lungs_mouse_entered"]
[connection signal="mouse_exited" from="Lungs3" to="." method="_on_Lungs_mouse_exited"]
[connection signal="mouse_entered" from="Lungs2" to="." method="_on_Lungs_mouse_entered"]
[connection signal="mouse_exited" from="Lungs2" to="." method="_on_Lungs_mouse_exited"]
